--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,18 @@
 		<version>1.1.1</version>
 	</dependency>
     
+    <dependency> <!-- needed by jasperreports to build-->
+       <groupId>com.lowagie</groupId>
+        <artifactId>itext</artifactId>
+        <version>2.1.7</version>
+    </dependency>
     
+     <dependency>
+	    <groupId>net.sf.jasperreports</groupId>
+        <artifactId>jasperreports</artifactId>
+        <version>5.2.0</version>
+     </dependency>
+     
   </dependencies>
   
   <build>
