--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>harmoney</groupId>
   <artifactId>statistics</artifactId>
-  <version>.1</version>
+  <version>0.1</version>
   <description>	</description>
   
   <properties>
